tests/errors/ArrayRedeclared.imp
VAR
  a[42] a[1000]
BEGIN
  a[13] := 42;
END
